--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>portfolio</title>
+  <title>Portfolio</title>
+  <link rel="icon" href="../favicon.ico">
 </head>
 <body>
   <script src="main.dart.js" type="application/javascript"></script>
