Temporary routing added + navigation hover

--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
   <title>Portfolio</title>
   <link rel="icon" href="../favicon.ico">
 </head>
-<body>
+<body id="app-container">
   <script src="main.dart.js" type="application/javascript"></script>
 </body>
 </html>
